; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_asfdec_o.c_detect_unknown_subobject.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_asfdec_o.c_detect_unknown_subobject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32*, %struct.TYPE_12__* }
%struct.TYPE_12__ = type { i64 }
%struct.TYPE_10__ = type { i32 (%struct.TYPE_11__*, %struct.TYPE_10__*)*, i8*, i32 }

@.str = private unnamed_addr constant [8 x i8] c"Unknown\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_11__*, i64, i64)* @detect_unknown_subobject to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @detect_unknown_subobject(%struct.TYPE_11__* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_11__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.TYPE_12__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_10__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_10__, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %14 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %14, i32 0, i32 1
  %16 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  store %struct.TYPE_12__* %16, %struct.TYPE_12__** %8, align 8
  %17 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  store i32* %19, i32** %9, align 8
  store %struct.TYPE_10__* null, %struct.TYPE_10__** %10, align 8
  br label %20

20:                                               ; preds = %66, %3
  %21 = load i32*, i32** %9, align 8
  %22 = call i64 @avio_tell(i32* %21)
  %23 = load i64, i64* %6, align 8
  %24 = load i64, i64* %7, align 8
  %25 = add nsw i64 %23, %24
  %26 = icmp sle i64 %22, %25
  br i1 %26, label %27, label %67

27:                                               ; preds = %20
  %28 = load i32*, i32** %9, align 8
  %29 = call i64 @avio_tell(i32* %28)
  %30 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %31 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = icmp eq i64 %29, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %27
  br label %67

35:                                               ; preds = %27
  %36 = load i32*, i32** %9, align 8
  %37 = call i64 @avio_tell(i32* %36)
  %38 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %39 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %38, i32 0, i32 0
  store i64 %37, i64* %39, align 8
  %40 = load i32*, i32** %9, align 8
  %41 = call i32 @ff_get_guid(i32* %40, i32* %11)
  store i32 %41, i32* %12, align 4
  %42 = icmp slt i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %35
  %44 = load i32, i32* %12, align 4
  store i32 %44, i32* %4, align 4
  br label %68

45:                                               ; preds = %35
  %46 = load i32, i32* %11, align 4
  %47 = call %struct.TYPE_10__* @find_guid(i32 %46)
  store %struct.TYPE_10__* %47, %struct.TYPE_10__** %10, align 8
  %48 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %49 = icmp ne %struct.TYPE_10__* %48, null
  br i1 %49, label %50, label %61

50:                                               ; preds = %45
  %51 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %52 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %51, i32 0, i32 0
  %53 = load i32 (%struct.TYPE_11__*, %struct.TYPE_10__*)*, i32 (%struct.TYPE_11__*, %struct.TYPE_10__*)** %52, align 8
  %54 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %55 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %56 = call i32 %53(%struct.TYPE_11__* %54, %struct.TYPE_10__* %55)
  store i32 %56, i32* %12, align 4
  %57 = icmp slt i32 %56, 0
  br i1 %57, label %58, label %60

58:                                               ; preds = %50
  %59 = load i32, i32* %12, align 4
  store i32 %59, i32* %4, align 4
  br label %68

60:                                               ; preds = %50
  br label %66

61:                                               ; preds = %45
  %62 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %13, i32 0, i32 1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %62, align 8
  %63 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %13, i32 0, i32 2
  store i32 1, i32* %63, align 8
  %64 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %65 = call i32 @asf_read_unknown(%struct.TYPE_11__* %64, %struct.TYPE_10__* %13)
  br label %66

66:                                               ; preds = %61, %60
  br label %20

67:                                               ; preds = %34, %20
  store i32 0, i32* %4, align 4
  br label %68

68:                                               ; preds = %67, %58, %43
  %69 = load i32, i32* %4, align 4
  ret i32 %69
}

declare dso_local i64 @avio_tell(i32*) #1

declare dso_local i32 @ff_get_guid(i32*, i32*) #1

declare dso_local %struct.TYPE_10__* @find_guid(i32) #1

declare dso_local i32 @asf_read_unknown(%struct.TYPE_11__*, %struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
